package com.nagendar.learning.mode;
/*
 * @author: pagidimarri.nagendar
 * @createdAt: 11/12/23 6:32pm
 */

public interface CommandMode {
	void process(String input);
}
